# gdt-coach

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  FINAL_PUBLIC_REVIEW.md  LICENSE  PROJECT.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLIC_RELEASE_PLAN.md  README.md  ROADMAP.md  RULE_AUDIT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  rule_request.yml
.github/workflows/: ci.yml
docs/: README.md
examples/: README.md  invalid_concentricity_deprecated.yaml  invalid_datum_reference_undefined.csv  invalid_flatness_with_datum.yaml  invalid_position_related_dimension_wrong_role.yaml  invalid_position_without_feature_of_size.yaml  invalid_projected_zone.yaml  valid_position.yaml
scripts/: README.md  generate_examples_readme.py
src/gdt_coach/: __init__.py  cli.py
src/gdt_coach/ingest/: __init__.py  adapter.py  csv_loader.py  exceptions.py  yaml_loader.py
src/gdt_coach/models/: __init__.py  base.py  datum.py  dimension.py  drawing.py  enums.py  feature.py  feature_control_frame.py  tolerance.py
src/gdt_coach/rules/: __init__.py  audit_status.py  base.py  category.py  engine.py  exceptions.py  finding.py  registry.py  severity.py  standard.py
tests/: test_cli.py  test_examples_readme.py
tests/ingest/: test_adapter.py  test_csv_loader.py  test_examples.py  test_yaml_loader.py
tests/models/: test_datum.py  test_dimension.py  test_drawing.py  test_enums.py  test_feature.py  test_feature_control_frame.py  test_tolerance.py
tests/rules/: conftest.py  test_base.py  test_engine.py  test_enums.py  test_finding.py  test_registry.py
tests/rules/checks/: conftest.py  test_angularity_related_dimension_must_be_angular.py  test_angularity_related_dimension_must_be_orientation.py  test_concentricity_symmetry_deprecated.py  test_datum_reference_must_be_defined.py  test_duplicate_datum_references.py  test_flatness_no_datum_references.py  test_form_mmc_requires_feature_of_size.py  test_form_tolerance_no_datum_rules.py  test_orientation_requires_datum_reference.py  test_position_material_condition_requires_feature_of_size.py  test_registration.py  (+9 more)
(+21 files in other folders)
