[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdt-coach"
version = "0.1.0"
description = "GDT Coach"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mustafa D. Abaylamak" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
]

[project.scripts]
gdt-coach = "gdt_coach.cli:main"

[project.urls]
Homepage = "https://github.com/mustafad/gdt-coach"

[tool.hatch.build.targets.wheel]
packages = ["src/gdt_coach"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "N",   # pep8-naming
    "A",   # flake8-builtins
    "PL",  # pylint
    "PTH", # flake8-use-pathlib
]
ignore = ["PLR0913"]

[tool.ruff.lint.isort]
known-first-party = ["gdt_coach"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=gdt_coach --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/gdt_coach"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
